--- a/01-android/app/src/main/res/layout/activity_main.xml
+++ b/01-android/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:background="@color/bc"
         android:shadowColor="#FFFFFF"
         android:text="@string/hola_mundo"
-        android:textColor="@color/font"
+        android:textColor="#536DFE"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="@+id/textView2"
@@ -29,5 +29,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btn_ciclo_vida"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CICLODEVIDA"
+        tools:layout_editor_absoluteX="146dp"
+        tools:layout_editor_absoluteY="392dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
