--- a/01-android/app/src/main/res/layout/activity_main.xml
+++ b/01-android/app/src/main/res/layout/activity_main.xml
@@ -109,4 +109,14 @@
         app:layout_constraintTop_toTopOf="@+id/btn_sqlite"
         app:layout_constraintVertical_bias="0.0" />
 
+    <Button
+        android:id="@+id/btn_intent_firebase_ui"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="UI Fire"
+        app:layout_constraintEnd_toStartOf="@+id/btn_ciclo_vida"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/btn_google_maps"
+        tools:layout_editor_absoluteY="341dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
