--- a/01-android/app/src/main/res/layout/activity_main.xml
+++ b/01-android/app/src/main/res/layout/activity_main.xml
@@ -113,10 +113,22 @@
         android:id="@+id/btn_intent_firebase_ui"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:text="UI Fire"
         app:layout_constraintEnd_toStartOf="@+id/btn_ciclo_vida"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btn_google_maps"
-        tools:layout_editor_absoluteY="341dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_google_maps" />
+
+    <Button
+        android:id="@+id/btn_intent_firestore"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="28dp"
+        android:text="firestore"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_sqlite"
+        app:layout_constraintStart_toEndOf="@+id/btn_sqlite"
+        app:layout_constraintTop_toTopOf="@+id/btn_sqlite"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
